tests/negative/semantic/structure_inheritance_cycle/input.ci
structure A : B {}
structure B : A {}
void main() {}
